--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "paths": {
       "#env": ["src/env.ts"],
       "#types": ["src/types/index.ts"],
-      "#utils/*": ["src/utils/*"]
+      "#database": ["src/database.ts"],
+      "#utils/*": ["src/utils/*"],
     }
   },
   "exclude": ["node_modules"]
